i dont know how to align the text over the button correctly, so 99% finished

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,36 +6,36 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
-  border: 8px solid white;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
-  padding: 16px;
+  padding: 8px;
   font-size: 16px;
   font-weight: bold;
   text-align: left;
-
+  margin-bottom: 8px;
 }
 
 .content {
   background: #e3f4ff;
   font-size: normal;
   text-align: left;
-  padding: 20px 16px 16px 16px;
-  border-bottom: 8px solid white;
+  padding: 16px 16px 16px 16px;
+  margin-bottom: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
-  padding: 20px;
-  border: 8px 8px solid white;
+  padding: 16px;
   text-align: center;
+  line-height: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
   padding: 8px 24px 8px 24px;
+  margin: auto;
 }
